<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_pagetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:background="#FFFFFF"
            android:scaleType="centerInside"
            android:text="@string/title_tutorial_1"
            android:textColor="#FF862D"
            android:textSize="22dp"
            android:textStyle="bold" />

        <ImageView
            android:contentDescription="@string/desc_logo"
            android:id="@+id/im_logo"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/logo" />
        
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#FF862D" >
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdgeLength="0dp"
        android:scrollX="0dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:background="#FFFFFF" >
            
            <ImageView
                android:contentDescription="@string/desc_ScrollView"
                android:id="@+id/layout_scrollView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/tutorial1" />
            
        </LinearLayout>
        

    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:background="#b1b1b1" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#DDDDDD" >

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:visibility="visible"
                android:contentDescription="@string/desc_infoButton"
                android:scaleType="centerInside"
                android:src="@drawable/next" />

            <ImageButton
                android:id="@+id/previousButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:visibility="invisible"
                android:contentDescription="@string/desc_historyButton"
                android:scaleType="centerInside"
                android:src="@drawable/previous" />

            <Button
                android:id="@+id/closeButton"
                android:layout_width="86dp"
                android:layout_height="48dp"
                android:layout_gravity="center|center_vertical"
                android:background="#DDDDDD"
                android:clickable="true"
                android:scaleType="centerInside"
                android:text="@string/skip_tutorial"
                android:textColor="#FF862D"
                android:textStyle="bold" />
        </FrameLayout>
    </FrameLayout>

</LinearLayout>